Fixed bug #33268 (iconv_strlen() works only with a parameter of < 3 in length)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187978 c90b9560-bf6c-de11-be94-00142212c4b1